# ai-code-assistant

./: ARCHITECTURE.md  LICENSE  README.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
extension/content/: aic.js  native.js
extension/content/detection/: filenameDetector.js  language.js  shell.js
extension/content/inject/: buttonInjector.js  processor.js
extension/content/platform/: detectPlatform.js  insert.js
extension/content/storage/: projects.js  recentPaths.js
extension/content/ui/: executeModal.js  saveModal.js
extension/content/utils/: clipboard.js  dom.js  path.js  toast.js
extension/icons/: ATTRIBUTES
native-host/: Cargo.toml  com.aicode.host.json  com.ccs.host.json  config.example.toml  install.sh
native-host/src/: main.rs
scripts/: diagnose.sh  generate-extension-key.sh  install.sh
test/: content-test.html
