[package]
name = "ccs-host"
version = "0.1.0"
edition = "2021"
description = "Native messaging host for Copilot Code Saver"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
