# native-host/Cargo.toml

[package]
name = "ai-code-host"
version = "0.1.0"
edition = "2021"
description = "Native messaging host for AI Code Assistant"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wait-timeout = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
